--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,63 +8,77 @@
     tools:context=".fragment.ProfileFragment">
 
     <ImageView
+        android:id="@+id/profilePicture"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:padding="55dp"
+
+        android:src="@drawable/ic_account_circle_light"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/profilePicture"
-        android:src="@drawable/ic_account_circle_light"
-        android:padding="55dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/uploadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_margin="10dp"
         android:text="Upload"
+
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintVertical_bias="0.9" />
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_margin="10dp"
         android:text="Send"
+
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintVertical_bias="0.9" />
 
     <TextView
         android:id="@+id/artistName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:text="Artist Name"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+
         app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
-        android:text="Artist Name"
-        android:textColor="@android:color/white" />
+        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1" />
 
     <TextView
         android:id="@+id/contactInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:textColor="@android:color/white"
+        android:text="Contact information"
+        android:textSize="20dp"
+
         app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Contact information"
-        android:textColor="@android:color/white" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!--  GUIDELINES  -->
 
