--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,18 +7,35 @@
     android:background="@color/colorBackground"
     tools:context=".fragment.ProfileFragment">
 
-    <ImageView
-        android:id="@+id/profilePicture"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="55dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="210dp"
+        android:layout_height="210dp"
 
-        android:src="@drawable/ic_account_circle_light"
+        android:layout_gravity="center"
+        app:cardCornerRadius="105dp"
+        app:cardBackgroundColor="@color/colorPrimary"
 
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="100dp">
+
+            <ImageView
+                android:id="@+id/profilePicture"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/doggi_target" />
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/uploadButton"
@@ -30,10 +47,10 @@
 
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
         app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9" />
 
     <Button
@@ -46,10 +63,10 @@
 
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
         app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9" />
 
     <TextView
@@ -61,39 +78,39 @@
         android:textColor="@android:color/white"
         android:textSize="20dp"
 
-        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0"
+        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1" />
+        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0" />
 
     <TextView
         android:id="@+id/contactInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:textColor="@android:color/white"
         android:text="Contact information"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
 
-        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1" />
 
     <!--  GUIDELINES  -->
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuideline0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:id="@+id/horizontalGuideline0"
         app:layout_constraintGuide_percent=".5" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuideline1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:id="@+id/horizontalGuideline1"
         app:layout_constraintGuide_percent=".8" />
 
 
