--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,43 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
+    android:orientation="vertical"
     tools:context=".fragment.ProfileFragment">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
         android:layout_gravity="center"
-        android:layout_margin="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:cardBackgroundColor="@color/cardBackground"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="5dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout0"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/cardBackground">
+
+            android:layout_height="wrap_content"
+            android:background="@drawable/pattern_background"
+
+            android:padding="16dp"
+            app:layout_constraintBottom_toTopOf="@id/constraintLayout1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePicture"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="116dp"
+                android:layout_height="116dp"
                 android:layout_gravity="center"
-                android:src="@drawable/doggi_target"
 
-                app:layout_constraintBottom_toTopOf="@id/horizontalGuideline3"
-                app:layout_constraintEnd_toEndOf="@id/verticalGuideline1"
-                app:layout_constraintStart_toStartOf="@id/verticalGuideline0"
-                app:layout_constraintTop_toTopOf="@id/horizontalGuideline2" />
+                android:src="@drawable/doggi_target"
+                app:civ_border_color="@color/colorBackground"
+                app:civ_border_width="8dp"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/editButton"
@@ -49,102 +58,105 @@
                 app:elevation="6dp"
                 app:fabSize="mini"
 
-                app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
-                app:layout_constraintEnd_toEndOf="@+id/profilePicture" />
-
-            <TextView
-                android:id="@+id/artistName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:fontFamily="@font/staatliches"
-                android:text="Artist Name"
-                android:textAllCaps="true"
-                android:textColor="@color/whitesmoke"
-                android:textSize="30dp"
-
-                app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0"
-                app:layout_constraintVertical_bias="0.1" />
-
-            <TextView
-                android:id="@+id/contactInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:fontFamily="@font/staatliches"
-                android:text="Contact information"
-                android:textColor="@color/whitesmoke"
-                android:textSize="25dp"
-
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1" />
-
-            <!--  GUIDELINES  -->
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/horizontalGuideline0"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".45" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/horizontalGuideline1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".85" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/horizontalGuideline2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".075" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/horizontalGuideline3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".375" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/verticalGuideline0"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".2" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/verticalGuideline1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".8" />
-
-            <ProgressBar
-                android:id="@+id/profileProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:indeterminateTintMode="src_atop"
-                android:indeterminateTint="@color/colorBackground"
-                android:visibility="gone"
-                android:elevation="60dp"
-                app:layout_constraintStart_toStartOf="@id/editButton"
-                app:layout_constraintEnd_toEndOf="@id/editButton"
-                app:layout_constraintTop_toTopOf="@id/editButton"
-                app:layout_constraintBottom_toBottomOf="@id/editButton" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:cardBackgroundColor="@color/cardBackground"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:padding="20dp">
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:gravity="center"
+                android:orientation="vertical"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0.25">
+
+                <TextView
+                    android:id="@+id/artistName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium"
+                    android:paddingBottom="8dp"
+                    android:text="Artist Name"
+                    android:textColor="@color/whitesmoke"
+                    android:textSize="24dp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/contactInfo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:fontFamily="@font/roboto_light"
+                        android:paddingEnd="12dp"
+                        android:text="username"
+                        android:textColor="@color/whitesmoke"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/artistScore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:fontFamily="@font/roboto_light"
+                        android:text="7,120"
+                        android:textColor="@color/whitesmoke"
+                        android:textSize="16dp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <!--  GUIDELINES  -->
+
+
+    <ProgressBar
+        android:id="@+id/profileProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="60dp"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/colorBackground"
+        android:indeterminateTintMode="src_atop"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/editButton"
+        app:layout_constraintEnd_toEndOf="@id/editButton"
+        app:layout_constraintStart_toStartOf="@id/editButton"
+        app:layout_constraintTop_toTopOf="@id/editButton" />
+
+
+</LinearLayout>
